<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/civixbackground"
    tools:context="com.getcivix.app.LoginPage">


    <EditText
        android:id="@+id/editTextEMail"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/emailhint"
        android:inputType="textPersonName"
        android:background="@color/white"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:hint="@string/passwordhint"
        android:inputType="textPersonName"
        android:background="@color/white"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@color/civixGreen"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:background="@color/civixGreen"
        android:textColor="@color/white"
        android:text="@string/register"        android:textStyle="bold"
        />




</RelativeLayout>