<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/civixbackground"
    tools:context=".RegisterUserPage">



    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="230dp"
            android:layout_centerHorizontal="true"
            android:gravity="bottom"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/editTextRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:hint="@string/usernamehint"
                android:inputType="textPersonName"
                android:background="@color/white"
                />

            <EditText
                android:id="@+id/editTextRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:ems="10"
                android:hint="@string/emailhint"
                android:inputType="textPersonName"
                android:background="@color/white"
                />

            <EditText
                android:id="@+id/editTextCreatePassword"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:ems="10"
                android:hint="@string/passwordhint"
                android:inputType="textPersonName"
                android:background="@color/white"
                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                >
                <TextView
                    android:id="@+id/gender_textview"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/civixGreen"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    />
                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text="@string/male"
                        android:checked="true"
                        />
                    <RadioButton
                        android:id="@+id/female_radio_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:text = "@string/female"
                        />
                </RadioGroup>
            </RelativeLayout>



            <TextView
                android:id="@+id/textViewInterests"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="240dp"
                android:text="Interests   "
                android:textColor="@color/civixGreen"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAllCaps="false" />

            <Spinner
                android:id="@+id/spinnerInterest"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="240dp"
                android:layout_toRightOf="@+id/textViewInterests"
                android:background="@android:drawable/btn_dropdown"
                />

        </RelativeLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="180dp"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/textViewAttachPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Picture"
                android:textColor="@color/civixGreen"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonAttachPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/civixGreen"
                android:textColor="@color/white"

                android:textStyle="bold"
                android:text="Attach" />

            <Button
                android:id="@+id/buttonUploadPicture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/civixGreen"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"

                android:textStyle="bold"
                android:text="Upload" />

        </LinearLayout>


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:background="@color/civixGreen"
            android:textColor="@color/white"
            android:text="Register"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/buttonReturnToSignIn"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:background="@color/civixGreen"
            android:textColor="@color/white"
            android:text="Registered? Login"
            android:textStyle="bold"
            />



    </RelativeLayout>


</RelativeLayout>