<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/civixbackground"
    tools:context="com.getcivix.app.SignupPage">



    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
     >


        <EditText
            android:id="@+id/editTextSelectInterest"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:ems="10"
            android:hint="My interests"
            android:inputType="textPersonName"
            android:background="@color/white"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="120dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAttachPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="Attach your profile picture"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonAttachPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/civixGreen"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="Upload" />

        </LinearLayout>


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="61dp"
            android:background="@color/civixGreen"
            android:textColor="@color/white"
            android:text="Register"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editTextRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/usernamehint"
            android:inputType="textPersonName"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/editTextRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/emailhint"
            android:inputType="textPersonName"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/editTextCreatePassword"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:ems="10"
            android:hint="@string/passwordhint"
            android:inputType="textPersonName"
            android:background="@color/white"
            />

        <EditText
            android:id="@+id/editTextSelectGender"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:hint="Select Gender"
            android:inputType="textPersonName"
            android:background="@color/white"
            />



    </RelativeLayout>


</RelativeLayout>